# voc_api

./: .gitignore  Dockerfile  README.md  install-packages.sh  pyproject.toml
ressources/: links_schema.sql  schema.sql
voc_api/: auth.py  deps.py  lib_cfg.py  lib_misc.py  main.py  models.py
voc_api/routers/: link.py  navigate.py  voc.py
