[tool.poetry]
name = "voc_api"
version = "0.1.0"
description = "Voc microservice api"
authors = ["Pieterjan Montens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pytz = "^2022.1"
PyYAML = "^6.0"
toml = "^0.10.2"
Whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "voc_api.main:main"
